updating toList Implementation